--- a/.config/firefox/chrome/bookmarks_on_hover.css
+++ b/.config/firefox/chrome/bookmarks_on_hover.css
@@ -1,3 +1,5 @@
+/* https://github.com/datguypiko/Firefox-Mod-Blur */
+
 /* Show bookmarks bar on hover */
 #PersonalToolbar {
   --uc-bm-height: 24px;
