--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -1,17 +1,17 @@
-@define-color cc-bg #11111b;
+@define-color cc-bg rgba(0, 0, 0, 0.6);
 
 @define-color noti-border-color #cdd6f4;
-@define-color noti-bg #11111b;
-@define-color noti-bg-darker rgb(38, 38, 38);
-@define-color noti-bg-hover #1e1e2e;
-@define-color noti-bg-focus #1e1e2e;
+@define-color noti-bg rgba(0, 0, 0, 0.4);
+@define-color noti-bg-darker rgba(0, 0, 0, 0.6);
+@define-color noti-bg-hover rgba(0, 0, 0, 0.4);
+@define-color noti-bg-focus rgba(0, 0, 0, 0.4);
 @define-color noti-close-bg rgba(255, 255, 255, 0.1);
 @define-color noti-close-bg-hover rgba(255, 255, 255, 0.15);
 
 @define-color text-color #cdd6f4;
 @define-color text-color-disabled rgb(150, 150, 150);
 
-@define-color bg-selected #1e1e2e;
+@define-color bg-selected rgba(0, 0, 0, 0.4);
 
 .notification-row {
   outline: none;
@@ -165,7 +165,7 @@
 .control-center {
   background: @cc-bg;
   border-radius: 10px;
-  border: 2px solid @noti-border-color;
+  border: 1px solid @noti-border-color;
 }
 
 .control-center-list {
@@ -256,78 +256,10 @@
   font-size: 1.1rem;
 }
 
-/* Buttons widget */
-.widget-buttons-grid {
-  padding: 8px;
-  margin: 8px;
-  border-radius: 0px;
-  background-color: @noti-bg;
-}
-
-.widget-buttons-grid > flowbox > flowboxchild > button {
-  background: @noti-bg;
-  border-radius: 0px;
-}
-
-.widget-buttons-grid > flowbox > flowboxchild > button:hover {
-  background: @noti-bg-hover;
-}
-
-/* Menubar widget */
-.widget-menubar > box > .menu-button-bar > button {
-  border: none;
-  background: @noti-bg;
-}
-
-/* .AnyName { Name defined in config after #
-  background-color: @noti-bg;
-  padding: 8px;
-  margin: 8px;
-  border-radius: 12px;
-}
-
-.AnyName>button {
-  background: transparent;
-  border: none;
-}
-
-.AnyName>button:hover {
-  background-color: @noti-bg-hover;
-} */
-
 .topbar-buttons > button {
   /* Name defined in config after # */
   border: none;
   background: transparent;
-}
-
-/* Volume widget */
-
-.widget-volume {
-  background-color: @noti-bg;
-  padding: 8px;
-  margin: 8px;
-  border-radius: 12px;
-}
-
-.widget-volume > box > button {
-  background: transparent;
-  border: none;
-}
-
-.per-app-volume {
-  background-color: @noti-bg-alt;
-  padding: 4px 8px 8px 8px;
-  margin: 0px 8px 8px 8px;
-  border-radius: 12px;
-}
-
-/* Backlight widget */
-.widget-backlight {
-  background-color: @noti-bg;
-  padding: 8px;
-  margin: 8px;
-  border-radius: 12px;
 }
 
 /* Title widget */
