--- a/.config/firefox/chrome/floating_search.css
+++ b/.config/firefox/chrome/floating_search.css
@@ -1,5 +1,5 @@
 /* https://github.com/Naezr/ShyFox */
-#urlbar[breakout-extend] {
+#urlbar[focused] {
   #urlbar-input {
     font-size: 24px !important;
   }
@@ -24,7 +24,7 @@
     content: "";
     position: fixed;
     pointer-events: none;
-    border-radius: var(--rounding);
+    border-radius: 20px;
 
     width: 100vw;
     height: 100vh;
@@ -32,6 +32,6 @@
     top: 0px;
     left: 0px;
 
-    background-color: color-mix(in srgb, var(--bg-col) 80%, transparent);
+    background-color: rgba(0, 0, 0, 0.7);
   }
 }
